syntax = "proto3";
package org.egdev;

option java_package = "egdev";
option java_multiple_files = true;

message FileUploadReq{
    string name = 1;
    bytes content = 2;
    int64 offset = 3;
}

message FileUploadResp{
    bool okStatus = 1;
    string message = 2;
}

service FileUploadService{
    rpc uploadFile(stream FileUploadReq) returns (FileUploadResp);
}